# sed

./: .gitignore  .gitmodules  .mailmap  ABOUT-NLS  AUTHORS  BUGS  ChangeLog  ChangeLog-2014  Makefile.am  NEWS  README  README-alpha  README-hacking  THANKS  THANKS.in  TODO  autoboot  autoboot.conf  basicdefs.h  bootstrap  bootstrap.conf  bootstrap.sh  bootstrap.sh.in  cfg.mk  configure.ac  init.cfg
build-aux/: .gitignore  gnulib-cache.m4  help2man  texi2dvi
config/: stdbool.m4  texi2dvi
doc/: Makefile.am  config.texi  fdl.texi  groupify.sed  local.mk  pcre.html  sed-dummy.1  sed-in.texi  sed.1  sed.texi  sed.x
lib/: .gitignore  Makefile.am  getline.c  getopt.h  gnulib.mk  local.mk  memchr.c  memmove.c  obstack.c  obstack.h  regcomp.c  regex.c  regex_.h  regex_internal.c  regex_internal.h  regexec.c  snprintf.c  stdbool_.h  strerror.c  strverscmp.c  utils.c  utils.h
m4/: .gitignore
pcre/: AUTHORS  ChangeLog  ChangeLog.pre-sed  LICENCE  Makefile.am  README  internal.h  pcre.h  pcregrep.c  regcomp.c  regdebug.c  regexec.c  regexp.c  regexp.h  reginfo.c  regperl.c  regposix.c  regstudy.c  regsub.c  regtables.c
po/: .gitignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  af.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  ga.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sed.pot  sk.po  sl.po  sr.po  ssed.pot  sv.po  tr.po  uk.po  (+3 more)
sed/: Makefile.am  compile.c  debug.c  dfa.c  dfa.h  execute.c  fmt.c  local.mk  mbcs.c  regexp.c  sed.c  sed.h  utils.c  utils.h
testsuite/: 8bit.sed  8bit.sh  8to7.sh  BOOST.tests  Coreutils.pm  CuSkip.pm  CuTmpdir.pm  Makefile.am  Makefile.tests  PCRE.tests  amp-escape.good  amp-escape.sed  badenc.sed  badenc.sh  binary.sh  bsd-wrapper.sh  bsd.good  bsd.sh  bug-regex10.c  bug-regex11.c  bug-regex12.c  bug-regex13.c  bug-regex14.c  bug-regex15.c  bug-regex16.c  bug-regex21.c  bug-regex27.c  bug-regex28.c  bug-regex7.c  bug-regex8.c  bug-regex9.c  bug32082.sh  bug32271-1.sh  bug32271-2.sh  cmd-0r.sh  cmd-R.sh  cmd-l.sh  colon-with-no-label.sh  command-endings.sh  comment-n.sh  (+102 more)
