## Process this file with automake to produce Makefile.in

noinst_LIBRARIES =
EXTRA_DIST =
BUILT_SOURCES =
MOSTLYCLEANFILES =
MOSTLYCLEANDIRS =

AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_srcdir)/intl -I$(top_srcdir)/pcre \
	-I$(top_srcdir)	-I$(top_builddir)/lib -I$(top_builddir)/intl

include gnulib.mk
