## Process this file with automake to produce Makefile.in

noinst_LIBRARIES =
EXTRA_DIST =
BUILT_SOURCES =
CLEANFILES =
MOSTLYCLEANFILES =
MOSTLYCLEANDIRS =

# Pacify automake
SUFFIXES = .a .o .c .y .l .h .sh .elc .el

AM_CPPFLAGS = -I$(top_srcdir)/lib -I$(top_srcdir)/intl -I$(top_srcdir) \
	-I$(top_builddir)/lib -I$(top_builddir)/intl

include gnulib.mk
